<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/main_title"
        android:textSize="32sp" />

    <Button
        style="@style/main_button"
        android:text="@string/main_calculate_chances" />

    <Button
        style="@style/main_button"
        android:text="@string/main_build_ticket" />

    <Button
        style="@style/main_button"
        android:text="@string/main_spin_wheel" />

</LinearLayout>
