<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="hr.fer.ruazosa.hw3.LottoTicketCreatorActivity">

    <TextView
        android:id="@+id/title"
        style="@style/screen_title"
        android:text="@string/creator_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creator_subtitle"
        android:id="@+id/subtitle" />

    <LinearLayout
        android:id="@+id/input_container"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:hint="@string/calculator_minor_hint"
            android:inputType="number|numberDecimal"
            android:maxLines="1"
            android:id="@+id/calculator_minor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/calculator_input_divider"
            android:id="@+id/input_divider" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:hint="@string/calculator_input_major_hint"
            android:inputType="number|numberDecimal"
            android:maxLines="1"
            android:id="@+id/calculator_major" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creator_generate"
        android:id="@+id/creator_generate"
        android:layout_marginTop="22dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:hint="@string/creator_result_hint"
        android:id="@+id/creator_result" />

</LinearLayout>
